--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="ceefax-header">
       <div class="header-line">
         <span id="pageInfo" class="page-info">P100</span>
-        <span class="page-title">BBC CEEFAX</span>
+        <span class="page-title">dizzy-fax</span>
         <span class="timestamp">
           <span id="datePart" class="date">WED 13 AUG</span>
           <span id="timePart" class="time">22:36:42</span>
